<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"
        android:textSize="25sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/s_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"/>

    <EditText
        android:id="@+id/s_de"
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:hint="@string/word_size"
        android:gravity="start"/>

    <Button
        android:id="@+id/s_mit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commit"
        android:background="#536fd8"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
</LinearLayout>